test_suite/tests/ui/input/no_params.stderr
error: expected at least one type parameter, found none
 --> tests/ui/input/no_params.rs:4:8
  |
4 | struct Test;
  |        ^^^^
