test_suite/tests/ui/input/no_params.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
struct Test;

fn main() {}
